# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  common.hpp  hittable.hpp  hittable_list.hpp  ppm.hpp  ray.hpp  renderer.hpp  sphere.hpp  vec3.hpp  xoshiro256ss.hpp
src/: camera.cpp  hittable.cpp  hittable_list.cpp  main.cpp  ppm.cpp  ray.cpp  renderer.cpp  sphere.cpp  vec3.cpp
test/: CMakeLists.txt  tests.cpp
